--- a/Django_mod19/templates/main_page.html
+++ b/Django_mod19/templates/main_page.html
@@ -7,10 +7,14 @@
 <body>
 <h1><a href="/platform">Магазин</a></h1>
 <h1>
-    <a href="http://127.0.0.1:8000/reg_html"><button type="button">Регистрация по форме HTML</button></a>
+    <a href="http://127.0.0.1:8000/reg_html">
+        <button type="button">Регистрация по форме HTML</button>
+    </a>
 </h1>
 <h1>
-    <a href="http://127.0.0.1:8000/reg_django"><button type="button">Регистрация по форме Django</button></a>
+    <a href="http://127.0.0.1:8000/reg_django">
+        <button type="button">Регистрация по форме Django</button>
+    </a>
 </h1>
 </body>
 </html>
