--- a/Django_mod19/templates/platform.html
+++ b/Django_mod19/templates/platform.html
@@ -1,19 +1,21 @@
 {% extends 'menu.html' %}
 
-{% block title %}{{ block.super }}{% endblock %}
+{% block title %}
+{{ block.super }}
+{% endblock %}
 
 {% block pagename %}
-    {{ block.super }}
+{{ block.super }}
 {% endblock %}
 
 
 {% block menu %}
-    {{ block.super }}
+{{ block.super }}
 {% endblock %}
 
 {% block content %}
 {% endblock %}
 
 {% block registration %}
-    {{ block.super }}
+{{ block.super }}
 {% endblock %}
